--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
   },
   "dependencies": {
     "@prisma/client": "^3.8.1",
+    "@reduxjs/toolkit": "^1.7.2",
     "axios": "^0.25.0",
+    "mongoose": "^6.2.0",
     "next": "12.0.8",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-redux": "^7.2.6",
     "swr": "^1.1.2"
   },
   "devDependencies": {
