--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@paypal/react-paypal-js": "^7.6.0",
     "@prisma/client": "^3.8.1",
     "@reduxjs/toolkit": "^1.7.2",
     "axios": "^0.25.0",
