--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/icons": "^1.1.7",
     "@paypal/react-paypal-js": "^7.6.0",
     "@prisma/client": "^3.8.1",
     "@reduxjs/toolkit": "^1.7.2",
@@ -21,8 +22,12 @@
     "swr": "^1.1.2"
   },
   "devDependencies": {
+    "@chakra-ui/react": "^1.8.6",
+    "@emotion/react": "^11.8.1",
+    "@emotion/styled": "^11.8.1",
     "eslint": "8.6.0",
     "eslint-config-next": "12.0.8",
+    "framer-motion": "^6.2.8",
     "prisma": "^3.8.1"
   }
 }
